force-app/main/default/objects/SDO_Community_Idea_Team__c.object
<CustomObject>
    <description>What: Idea Team for Community demo.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the project team member doesn&apos;t exist as a user in Salesforce you can add them as a contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N8a00000BTyLxEAL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>SDO_Community_Ideas_Projects__c</referenceTo>
        <relationshipName>R00N8a00000BTyLgEAL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this feeling to track individuals participating on the project team.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N8a00000BTyLbEAL</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Idea Team</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>